[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-tunnel"
version = "0.1.0"
description = "Persistent SSH reverse tunnel for SciTeX (NAT traversal)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = ["scitex", "ssh", "tunnel", "reverse-tunnel", "nat-traversal", "autossh"]
dependencies = ["click"]

[project.scripts]
scitex-tunnel = "scitex_tunnel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_tunnel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
